k8s-full/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f infra/docker-compose.base.yml -f infra/docker-compose.prod.yml -o k8s-full/
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f infra/docker-compose.base.yml -f infra/docker-compose.prod.yml -o k8s-full/
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/infra-default: "true"
        io.kompose.service: redis
    spec:
      containers:
        - args:
            - redis-server
            - --requirepass
            - ""
          image: redis:7-alpine
          livenessProbe:
            exec:
              command:
                - redis-cli
                - -a
                - ""
                - PING
            failureThreshold: 10
            periodSeconds: 5
            timeoutSeconds: 3
          name: redis
          ports:
            - containerPort: 6379
              hostPort: 6379
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
