k8s-full/app-media-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f infra/docker-compose.base.yml -f infra/docker-compose.prod.yml -o k8s-full/
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: app-media
  name: app-media
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: app-media
status:
  loadBalancer: {}
