k8s-full/app-media.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-media
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-media
  template:
    metadata:
      labels:
        app: app-media
    spec:
      containers:
        - name: app-media
          image: tak002/app-media:latest
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: app-media
  namespace: chat-app
spec:
  ports:
    - port: 8080
  selector:
    app: app-media
