k8s-full/app-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-service
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-service
  template:
    metadata:
      labels:
        app: app-service
    spec:
      containers:
        - name: app-service
          image: tak002/app-service:latest
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: chat-app
spec:
  ports:
    - port: 8080
  selector:
    app: app-service
