k8s-full/chat-history.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-history
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-history
  template:
    metadata:
      labels:
        app: chat-history
    spec:
      containers:
        - name: chat-history
          image: tak002/chat-history:latest
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: chat-history
  namespace: chat-app
spec:
  ports:
    - port: 8080
  selector:
    app: chat-history
