k8s-full/chat-ws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-ws
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-ws
  template:
    metadata:
      labels:
        app: chat-ws
    spec:
      containers:
        - name: chat-ws
          image: tak002/chat-ws:latest
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: chat-ws
  namespace: chat-app
spec:
  ports:
    - port: 8080
  selector:
    app: chat-ws
