k8s-full/reverse-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse-proxy
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reverse-proxy
  template:
    metadata:
      labels:
        app: reverse-proxy
    spec:
      containers:
        - name: reverse-proxy
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              name: config
      volumes:
        - name: config
          configMap:
            name: nginx-config

---
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy
  namespace: chat-app
spec:
  type: NodePort
  selector:
    app: reverse-proxy
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
