k8s-full/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: app-auth
                port:
                  number: 8080

          - path: /service
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 8080

          - path: /media
            pathType: Prefix
            backend:
              service:
                name: app-media
                port:
                  number: 8080
